[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[dependencies]
bevy = { version= "0.10.1" }
bevy_editor_pls = "0.4.0"
bevy_ggrs = "0.12.0"
bevy_matchbox = { version = "0.6.0", features = ["ggrs"] }
bytemuck = "1.13.1"
nalgebra = "0.32.2"

# Enable small optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
